created table for pokemon and a pagination nav at the bottom

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "pokemon-vite",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-loading-overlay": "^5.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
